Added my api key

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     const { useState, useEffect, useRef } = React;
     
     // --- Gemini API Setup ---
-    const apiKey = ""; // API key is provided by the environment
+    const apiKey = "AIzaSyC9Yrm3xMmTGs2s3nbc6qht14RLr9Bg8Q4"; // API key is provided by the environment
     
     // Helper function for exponential backoff retry logic
     const makeApiCall = async (url, options, retries = 3) => {
@@ -537,3 +537,4 @@
     </script>
 </body>
 </html>
+
