--- a/index.html
+++ b/index.html
@@ -134,15 +134,23 @@
       const [showCopied, setShowCopied] = useState(false);
       const [activeTab, setActiveTab] = useState('builder'); // builder, history
       const [apiKey, setApiKey] = useState(() => localStorage.getItem('geminiApiKey') || '');
+      const [apiKeyInput, setApiKeyInput] = useState(() => localStorage.getItem('geminiApiKey') || '');
+      const [apiKeySaved, setApiKeySaved] = useState(false);
 
-      // Persist API key locally in this browser (not in your code or repo)
-      useEffect(() => {
-        if (apiKey) {
-          localStorage.setItem('geminiApiKey', apiKey);
-        } else {
-          localStorage.removeItem('geminiApiKey');
-        }
-      }, [apiKey]);
+      // Function to save API key
+      const handleSetApiKey = () => {
+        setApiKey(apiKeyInput);
+        localStorage.setItem('geminiApiKey', apiKeyInput);
+        setApiKeySaved(true);
+        setTimeout(() => setApiKeySaved(false), 2000);
+      };
+
+      // Function to clear API key
+      const handleClearApiKey = () => {
+        setApiKeyInput('');
+        setApiKey('');
+        localStorage.removeItem('geminiApiKey');
+      };
 
       // --- Constants & Templates ---
       
@@ -311,19 +319,55 @@
             <Header />
 
             {/* Gemini API Key (stored only in this browser) */}
-            <div className="mb-4 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-2 bg-slate-900/70 border border-slate-800 rounded-xl px-4 py-3">
-              <div className="text-xs text-slate-400">
-                <span className="font-semibold text-slate-200">Gemini API Key</span>
-                <span className="ml-1 text-slate-500">(not saved in the code or repo)</span>
+            <div className="mb-4 flex flex-col gap-3 bg-slate-900/70 border border-slate-800 rounded-xl px-4 py-3">
+              <div className="flex items-center justify-between">
+                <div className="text-xs text-slate-400">
+                  <span className="font-semibold text-slate-200">Gemini API Key</span>
+                  <span className="ml-1 text-slate-500">(not saved in the code or repo)</span>
+                </div>
+                {apiKey && (
+                  <span className="text-xs text-emerald-400 flex items-center gap-1">
+                    <Check size={12} /> Key saved
+                  </span>
+                )}
               </div>
               <div className="flex items-center gap-2">
                 <input
                   type="password"
-                  value={apiKey}
-                  onChange={(e) => setApiKey(e.target.value)}
+                  value={apiKeyInput}
+                  onChange={(e) => setApiKeyInput(e.target.value)}
+                  onKeyDown={(e) => {
+                    if (e.key === 'Enter') {
+                      handleSetApiKey();
+                    }
+                  }}
                   placeholder="Paste your API key..."
-                  className="w-56 bg-slate-950 border border-slate-700 rounded-lg px-3 py-1.5 text-xs text-slate-200 placeholder:text-slate-600 focus:outline-none focus:border-indigo-500"
+                  className="flex-1 bg-slate-950 border border-slate-700 rounded-lg px-3 py-2 text-xs text-slate-200 placeholder:text-slate-600 focus:outline-none focus:border-indigo-500"
                 />
+                <button
+                  onClick={handleSetApiKey}
+                  disabled={!apiKeyInput.trim()}
+                  className="px-4 py-2 bg-indigo-600 hover:bg-indigo-500 disabled:opacity-50 disabled:cursor-not-allowed text-white text-xs font-medium rounded-lg transition-all flex items-center gap-1.5"
+                >
+                  {apiKeySaved ? (
+                    <>
+                      <Check size={14} /> Saved!
+                    </>
+                  ) : (
+                    <>
+                      <Save size={14} /> Set API Key
+                    </>
+                  )}
+                </button>
+                {apiKey && (
+                  <button
+                    onClick={handleClearApiKey}
+                    className="px-3 py-2 bg-slate-700 hover:bg-slate-600 text-slate-300 text-xs font-medium rounded-lg transition-all"
+                    title="Clear API key"
+                  >
+                    Clear
+                  </button>
+                )}
               </div>
             </div>
 
@@ -568,4 +612,5 @@
     </script>
 </body>
 </html>
+
 
